tests/samples/invalid/ConditionalAchievement.py
# cases where ConditionalAchievement should not unlock

# >> CASE
[i for i in range(10) if i % 2 == 0]

# >> CASE
pass
